fix: [pd-302] safari and firefox alignment added

--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -105,10 +105,6 @@ main {
     display: flex;
     flex: 1;
     order: 1;
-    padding-bottom: 25px;
-    &_isArabic {
-      padding-bottom: 25px;
-    }
     padding-right: 20px;
   }
 
