--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -184,7 +184,7 @@
             letter-spacing: 0px;
             opacity: 1;
             width: 200px;
-            height: 20px;
+            height: 21px;
             white-space: nowrap;
             overflow: hidden;
             display: inline-block;
@@ -378,8 +378,11 @@ div.SearchOverlay.Overlay {
 
             .Price {
                 direction: ltr;
-                font-weight: var(--fw-bold);
                 font-size: 14px;
+                font-weight: var(--fw-demi);
+                color: var(--color-pure-black);
+                letter-spacing: 0;
+                line-height: 19px;
                 &_isArabic {
                     direction: rtl;
                 }
